# cascade_filters_solver

./: CMakeLists.txt  README.md
fir_data/: filters.json  filters_ifcs18.json  filters_tuffc20.json
module/: FindGurobi.cmake
src/: main.cc  mip1_c++.cc
src/local/: Fir.cc  Fir.h  LinearProgram.cc  LinearProgram.h  MaximizeRejection.cc  MaximizeRejection.h  MinimizeArea.cc  MinimizeArea.h  QuadraticProgram.cc  QuadraticProgram.h  ScriptGenerator.cc  ScriptGenerator.h  TclADC.cc  TclADC.h  TclPRN.cc  TclPRN.h  TclProject.cc  TclProject.h
tools/: generate_fir1.m  generate_firls.m
tools/cascaded_filters/: CMakeLists.txt  README.md  main.cc  plot_data.m
tools/cascaded_filters/filters/: generate_filters.m
